# ulcer-detection-crohns

./: MLproject  README.md  pyproject.toml  pytest.ini  python_env.yaml
configs/: example.yaml
configs/experiments/: ulcer_batch.yaml
data/ulcer/splits/: HELDOUT_MANIFEST_README.md
docs/: DATA_ORGANIZATION.md
results/ulcer/eda/: clip_summary.csv  eda_report.txt  preprocessing_report.txt  split_label_table.csv  statistics.json  video_summary.csv
scripts/: run_experiments.py
scripts/data/: check_duplicates.py  preprocess_frames.py
scripts/exploratory/: README.md
scripts/noninformative/: eda.py  filter_frames.py  filter_raw_ulcer.py  preprocess_inf.py  review_predictions.py  train_noninformative.py
scripts/ulcer/: create_manifest.py  eda.py  evaluate_with_delong.py  extract_frames.py  log_heldout_clip_best_fold.py  log_heldout_clip_metrics.py  preprocess.py  statistical_comparison.py  train.py
src/config/: __init__.py  loader.py  mlflow_config.py  models.py  paths.py  preprocessing.py  training.py  validation.py
src/data/: annotation_conversion.py  annotation_loaders.py  constants.py  dataloader.py  dataset.py  eda_utils.py  file_utils.py  interval_sampling.py  pipeline_report.py  roi_extraction.py  splits.py  subsampling.py  transforms.py  video_extraction.py  video_utils.py
src/evaluation/: __init__.py  aggregation.py  delong.py  metrics.py  mlflow_utils.py  model_loader.py  plots.py  runner.py  threshold.py
src/models/: classifier.py  probabilities.py
src/noninformative/: __init__.py  features.py  model.py  predict.py
src/training/: run_modes.py  trainer.py
src/utils/: __init__.py  common.py  logging.py
tests/: README.md  __init__.py  conftest.py  test_annotation_loaders.py  test_config.py  test_config_validation.py  test_data_dataloader.py  test_data_dataset.py  test_data_splits.py  test_data_splits_extended.py  test_data_subsampling.py  test_data_transforms.py  test_evaluation_aggregation.py  test_evaluation_delong.py  test_evaluation_metrics.py  test_evaluation_metrics_extended.py  test_evaluation_model_loader.py  test_evaluation_runner.py  test_evaluation_threshold.py  test_noninformative_model.py  test_roi_extraction.py  test_scripts_data.py  test_subsampling.py  test_training_trainer.py  test_ulcer_scripts.py  test_utils.py  test_utils_extended.py  test_video_extraction.py
